@@ -1,3 +1,17 @@
+######################################################################
+#
+# EPrints::Script
+#
+######################################################################
+#
+#  __COPYRIGHT__
+#
+# Copyright 2000-2008 University of Southampton. All Rights Reserved.
+# 
+#  __LICENSE__
+#
+######################################################################
+
 package EPrints::ScreenProcessor;
 
 use strict;
